--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,15 @@
                     <iframe class="embed-responsive-item" src="https://player.bilibili.com/player.html?aid=95027014" allowfullscreen></iframe>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 p-4">
                 <h1>
 					哪个城市属于你？
 				</h1>
 				<p>
-                    时间非常是啊
+                    <br>
+                    寻求一个平衡
+                    <br>
+                    Better life，better work ！
 				</p>
 				<p align="right">
 					 <a class="btn btn-primary btn-large" href="./city">Learn more</a>
@@ -24,35 +27,110 @@
         </div>
     </div>
 
-        <div class="jumbotron" style="background:transparent !important">
-            <div class="container-fluid">
+    <div class="container-fluid">
+        <div class="row mb-2">
+        <div class="col-md-6">
+          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">🎉🎉🎉</strong>
+              <h3 class="mb-0">杭州</h3>
+              <div class="mb-1 text-muted">长三角</div>
+              <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+              <a href="#">Continue reading</a>
+            </div>
+            <div class="col-auto d-none d-lg-block">
+                    <div id="hz" style="width: 200px;height:250px;"></div>
+                    <script>
+                        place = '浙江省/杭州市'
+                        url = "../static/chinaMapJsonData/"+place+"/datas.json"
+                        $.get(url,function (geojson) {
+                            echarts.registerMap(place,geojson);
+                            var chart = echarts.init(document.getElementById('hz'),{renderer:'svg'});
+                            chart.setOption({
+                                series: [{
+                                    type: 'map',
+                                    mapType: place,
+                                    label:{
+                                        show: true
+                                    }
+                                }]
+                            });
+                              });
+                    </script>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250">
+            <div class="col p-4 d-flex flex-column position-relative">
+              <strong class="d-inline-block mb-2 text-success">长三角 南太湖</strong>
+              <h3 class="mb-0">湖州市</h3>
+              <div class="mb-1 text-muted">🏔🌲🌊</div>
+              <p class="mb-auto">这是我家世界独额废话复活是服到付沙发覅U盾师傅带好看复活的时候怕发生的股票啊师傅还是到付好屌丝U回复数的方法</p>
+              <a href="#" class="stretched-link">Continue reading</a>
+            </div>
+            <div class="col-auto d-none d-lg-block">
+{#              <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>#}
+            </div>
+                  <div id="zj" style="width: 250px"></div>
+                    <script>
+                        place = '浙江省/湖州市'
+                        url = "../static/chinaMapJsonData/"+place+"/datas.json"
+                        $.get(url,function (geojson) {
+                            echarts.registerMap(place,geojson);
+                            var chart = echarts.init(document.getElementById('zj'),{renderer:'svg'});
+                            chart.setOption({
+                                series: [{
+                                    type: 'map',
+                                    mapType: place,
+                                    label:{
+                                        show: true
+                                    }
+                                }]
+                            });
+                              });
+                    </script>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="demo" style="width: 800px;height:600px;"></div>
+    <script type="text/javascript" src="../static/map/js/province/beijing.js"></script>
+    <script>
+    var chart = echarts.init(document.getElementById('demo'),{renderer:'svg'});
+    chart.setOption({
+        title:{
+            text: '北京',
+            left: 'center'
+        },
+        series: [{
+            type: 'map',
+            mapType: '北京',
+            label: {
+					normal: {
+						show: true,
+                        position: 'bottom'
+					},
+					emphasis: {
+						show: true
+					}
+				}
+        }]
+    });
+    </script>
 
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p>决战长三角</p>
-                    </div>
-                    <div class="col-sm-6">
+    <div class="container-fluid">
 
-
-                    </div>
-                </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <p>决战长三角</p>
+            </div>
+            <div class="col-sm-6">
+            
             </div>
         </div>
-        
-        <div class="jumbotron">
-            <div class="container-fluid">
+    </div>
 
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p>决战长三角</p>
-                    </div>
-                    <div class="col-sm-6">
-
-
-                    </div>
-                </div>
-            </div>
-        </div>
     <div class="container" align="center">
     <div id="chart" style="width:1000px; height:600px;"></div>
     </div>
