--- a/templates/city/citylist.html
+++ b/templates/city/citylist.html
@@ -65,33 +65,44 @@
                                     shadowColor: 'rgba(0, 0, 0, 0.5)'
                                 }
                             }
-                        },
-                {#series : [#}
-                {#           {#}
-                {#               name: 'world',#}
-                {#               type: 'scatter',#}
-                {#               coordinateSystem: 'geo',#}
-                {#               label: {#}
-                {#                   normal: {#}
-                {#                       position: 'right',#}
-                {#                       show: false#}
-                {#                   },#}
-                {#                   emphasis: {#}
-                {#                       show: true#}
-                {#                   }#}
-                {#               },#}
-                {#               itemStyle: {#}
-                {#                   normal: {#}
-                {#                       color: '#ddb926'#}
-                {#                   }#}
-                {#               }#}
-                {#            }]#}
+                        }
             };
             map.setOption(options);
+        </script>
+    </div>
+<div class="container-fluid">
+    <div id="bmap" style="width: 600px; height: 400px;"></div>
+</div>
+        <script type="text/javascript">
+            var bmap = echarts.init(document.getElementById("bmap"));
+            options = {
+                title:{
+                    text: "上海"
+                },
+                bmap: {
+                    // 百度地图中心经纬度
+                    center: [121.44518, 31.23916],
+                    // 百度地图缩放
+                    zoom: 10,
+                    // 是否开启拖拽缩放，可以只设置 'scale' 或者 'move'
+                    roam: true,
+                    // 百度地图的自定义样式，见 http://developer.baidu.com/map/jsdevelop-11.htm
+                    mapStyle: {}
+                },
+                series: [{
+                    type: 'scatter',
+                    // 使用百度地图坐标系
+                    coordinateSystem: 'bmap',
+                    // 数据格式跟在 geo 坐标系上一样，每一项都是 [经度，纬度，数值大小，其它维度...]
+                    data: [ [120, 30, 1] ]
+                }]
+            };
+            {#var bmap = chart.getModel().getComponent('bmap').getBMap();#}
+            {#bmap.addControl(new BMap.MapTypeControl());#}
+
+            bmap.setOption(options);
 
         </script>
-
-    </div>
 
 
 {% endblock %}
