--- a/templates/city/citylist.html
+++ b/templates/city/citylist.html
@@ -1,110 +1,221 @@
-{% extends 'index.html' %}
-{% block title %} 上海{% endblock %}
-<body>
+{% extends 'base.html' %}
+{% block title %} city{% endblock %}
 {% block content %}
 
-    <div class="jumbotron">
-        <div class="row">
-            <div class="col-sm-6" >
-                <h1 align="center"> 上海</h1>
-
-            </div>
-            <div class="col-sm-6">
-                <img src="https://www.google.com/maps/vt/data=Nmmn4hmxl_0149_8iB2CNU_hpzMR8v5ih51U08fC68jvD964GEfD00iNKHxIlu6jPtW3GINNlQCZxnQ2wkD_78fFy0qPMfqgY55yEkEeKK3YSF4zL9MZc01FuYn4EXv_iW1V1lb2k8a4PbpwMnCSSYkROXs7ro1Gn93jxtLdEk0vJ0MCs17yTUni28hrUj0n2GqaJyeFaGbTAihoa5KWJ4qsvJ5yyQIZK8Pr7DyGtRmPQZ2AsCKRNkvcmV8" alt="shanghai">
-            </div>
+    <div  class="jumbotron">
+            <div id="china" class="container-fluid" style="width: 800px;height: 600px;" align="center">
+                <script>
+                    $.get('/static/map/json/china.json',function (geojson) {
+                          echarts.registerMap('china',geojson);
+                          var map=echarts.init(document.getElementById("china"),{renderer:'svg'});
+                          options = {
+                              series: [{
+                                    type: 'map',
+                                    mapType: 'china',
+                                    label:{
+                                        show: true
+                                    }
+                                }]
+                          };
+                          map.setOption(options);
+                    })
+                </script>
         </div>
     </div>
+    <p>{{ ciytylist }}</p>
 
-    <div class="container" align="center">
-        <br>
-        <div id="bar" style="width:1000px; height:600px;"></div>
-        <script>
-        $(
-                function () {
-                    var chart = echarts.init(document.getElementById('bar'), 'white', {renderer: 'canvas'});
-                    $.ajax({
-                        type: "GET",
-                        url: "../city/bar",
-                        dataType: 'json',
-                        success: function (result) {
-                            chart.setOption(result.data);
-                        }
-                    });
-                }
-            )
-        </script>
-    </div>
-    <br>
-    <div class="container-fluid">
-        <div id="map" style="width: 600px; height: 400px;"></div>
-        <script type="text/javascript">
-            var map = echarts.init(document.getElementById('map'),{renderer:'svg'});
-            options = {
-                geo: {
-                            map: 'china',
-                            roam: true,
-                            label: {
-                                normal: {
-                                    show: true,
-                                    textStyle: {
-                                        color: 'rgba(0,0,0,0.4)'
-                                    }
+
+    <ul class="row">
+        {% for city,more in citylist.items %}
+            <li class="col-6" style="list-style: none;margin-bottom: 10px">
+    <div class="theme-cards-holder" style="height: 300px;">
+      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column">
+          <strong class="d-inline-block mb-2 text-primary">{{more.tags}}</strong>
+          <h3 class="mb-0">{{more.name}}</h3>
+          <div class="mb-1 text-muted">{{more.place}}</div>
+            <p>一段话介绍</p>
+          <p class="card-text mb-auto">city的全部字段：{{more}}</p>
+          <a href="../city/?city={{ more.name }}">详情</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+                <div id="{{city}}" style="width: 250px;height:300px;"></div>
+                <script>
+                    place = '{{more.address}}'
+                    id = '{{ city }}'
+                    url = "../static/chinaMapJsonData/"+place+"/datas.json"
+                    $.get(url,function (geojson) {
+                        echarts.registerMap(id,geojson);
+                        var chart = echarts.init(document.getElementById('{{ city }}'),{renderer:'svg'});
+                        chart.setOption({
+                            series: [{
+                                type: 'map',
+                                mapType: id,
+                                label:{
+                                    show: true
                                 }
-                            },
-                            itemStyle: {
-                                normal:{
-                                    borderColor: 'rgba(10, 21, 21, 8)'
-                                },
-                                emphasis:{
-                                    color: '#fff' ,
-                                    areaColor: '#fff',
-                                    shadowOffsetX: 0,
-                                    shadowOffsetY: 0,
-                                    shadowBlur: 20,
-                                    borderWidth: 0,
-                                    shadowColor: 'rgba(0, 0, 0, 0.5)'
-                                }
-                            }
-                        }
-            };
-            map.setOption(options);
-        </script>
+                            }]
+                        });
+                          });
+                </script>
+        </div>
+      </div>
     </div>
-<div class="container-fluid">
-    <div id="bmap" style="width: 600px; height: 400px;"></div>
-</div>
-        <script type="text/javascript">
-            var bmap = echarts.init(document.getElementById("bmap"));
-            options = {
-                title:{
-                    text: "上海"
-                },
-                bmap: {
-                    // 百度地图中心经纬度
-                    center: [121.44518, 31.23916],
-                    // 百度地图缩放
-                    zoom: 10,
-                    // 是否开启拖拽缩放，可以只设置 'scale' 或者 'move'
-                    roam: true,
-                    // 百度地图的自定义样式，见 http://developer.baidu.com/map/jsdevelop-11.htm
-                    mapStyle: {}
-                },
-                series: [{
-                    type: 'scatter',
-                    // 使用百度地图坐标系
-                    coordinateSystem: 'bmap',
-                    // 数据格式跟在 geo 坐标系上一样，每一项都是 [经度，纬度，数值大小，其它维度...]
-                    data: [ [120, 30, 1] ]
-                }]
-            };
+    </li>
+        {% endfor %}
+    </ul>
+{##}
+{#    <div class="container">#}
+{#        <div class="row">#}
+{#        <div class="col-md-6" style="height: 300px;" align="center">#}
+{#          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">#}
+{#            <div class="col p-4 d-flex flex-column">#}
+{#              <strong class="d-inline-block mb-2 text-primary">🎉🎉🎉</strong>#}
+{#              <h3 class="mb-0">杭州</h3>#}
+{#              <div class="mb-1 text-muted">长三角</div>#}
+{#              <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>#}
+{#              <a href="#">Continue reading</a>#}
+{#            </div>#}
+{#            <div class="col-auto d-none d-lg-block">#}
+{#                    <div id="hz" style="width: 250px;height:300px;"></div>#}
+{#                    <script>#}
+{#                        place = '浙江省/杭州市'#}
+{#                        url = "../static/chinaMapJsonData/"+place+"/datas.json"#}
+{#                        $.get(url,function (geojson) {#}
+{#                            echarts.registerMap(place,geojson);#}
+{#                            var chart = echarts.init(document.getElementById('hz'),{renderer:'svg'});#}
+{#                            chart.setOption({#}
+{#                                series: [{#}
+{#                                    type: 'map',#}
+{#                                    mapType: place,#}
+{#                                    label:{#}
+{#                                        show: true#}
+{#                                    }#}
+{#                                }]#}
+{#                            });#}
+{#                              });#}
+{#                    </script>#}
+{#            </div>#}
+{#          </div>#}
+{#        </div>#}
+{#        <div class="col-md-6" style="height: 300px;">#}
+{#          <div class="row border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250">#}
+{#            <div class="col p-4 d-flex flex-column position-relative">#}
+{#              <strong class="d-inline-block mb-2 text-success">长三角 南太湖</strong>#}
+{#              <h3 class="mb-0">湖州</h3>#}
+{#              <div class="mb-1 text-muted">🏔🌲🌊</div>#}
+{#              <p class="mb-auto">这是我家世界独复活的时候怕发生的股票啊师傅还是到付好屌丝U回复数的方法</p>#}
+{#              <a href="#" class="">Continue reading</a>#}
+{#            </div>#}
+{#                  <div id="zj" class="col-auto d-none d-lg-block" style="width: 250px;height: 300px;"></div>#}
+{#                    <script>#}
+{#                        place = '浙江省/湖州市'#}
+{#                        url = "../static/chinaMapJsonData/"+place+"/datas.json"#}
+{#                        $.get(url,function (geojson) {#}
+{#                            echarts.registerMap(place,geojson);#}
+{#                            var chart = echarts.init(document.getElementById('zj'));#}
+{#                            chart.setOption({#}
+{#                                series: [{#}
+{#                                    type: 'map',#}
+{#                                    mapType: place,#}
+{#                                    label:{#}
+{#                                        show: true#}
+{#                                    }#}
+{#                                }]#}
+{#                            });#}
+{#                              });#}
+{#                    </script>#}
+{#          </div>#}
+{#          </div>#}
+{#        </div>#}
+{#        </div>#}
+{#    </div>#}
+{##}
+{#    <hr style="featurette-divider">#}
+{#    <div class="container-fluid">#}
+{#        <div id="map" style="width: 600px; height: 400px;"></div>#}
+{#        <script type="text/javascript">#}
+{#            var map = echarts.init(document.getElementById('map'),{renderer:'svg'});#}
+{#            options = {#}
+{#                geo: {#}
+{#                            map: 'china',#}
+{#                            roam: true,#}
+{#                            label: {#}
+{#                                normal: {#}
+{#                                    show: true,#}
+{#                                    textStyle: {#}
+{#                                        color: 'rgba(0,0,0,0.4)'#}
+{#                                    }#}
+{#                                }#}
+{#                            },#}
+{#                            itemStyle: {#}
+{#                                normal:{#}
+{#                                    borderColor: 'rgba(10, 21, 21, 8)'#}
+{#                                },#}
+{#                                emphasis:{#}
+{#                                    color: '#fff' ,#}
+{#                                    areaColor: '#fff',#}
+{#                                    shadowOffsetX: 0,#}
+{#                                    shadowOffsetY: 0,#}
+{#                                    shadowBlur: 20,#}
+{#                                    borderWidth: 0,#}
+{#                                    shadowColor: 'rgba(0, 0, 0, 0.5)'#}
+{#                                }#}
+{#                            }#}
+{#                        }#}
+{#            };#}
+{#            map.setOption(options);#}
+{#        </script>#}
+{#    </div>#}
+{#<div class="container-fluid">#}
+{#    <div id="bmap" style="width: 600px; height: 400px;"></div>#}
+{#</div>#}
+{#        <script type="text/javascript">#}
+{#            var bmap = echarts.init(document.getElementById("bmap"));#}
+{#            options = {#}
+{#                title:{#}
+{#                    text: "上海"#}
+{#                },#}
+{#                bmap: {#}
+{#                    // 百度地图中心经纬度#}
+{#                    center: [121.44518, 31.23916],#}
+{#                    // 百度地图缩放#}
+{#                    zoom: 10,#}
+{#                    // 是否开启拖拽缩放，可以只设置 'scale' 或者 'move'#}
+{#                    roam: true,#}
+{#                    // 百度地图的自定义样式，见 http://developer.baidu.com/map/jsdevelop-11.htm#}
+{#                    mapStyle: {}#}
+{#                },#}
+{#                series: [{#}
+{#                    type: 'scatter',#}
+{#                    // 使用百度地图坐标系#}
+{#                    coordinateSystem: 'bmap',#}
+{#                    // 数据格式跟在 geo 坐标系上一样，每一项都是 [经度，纬度，数值大小，其它维度...]#}
+{#                    data: [ [120, 30, 1] ]#}
+{#                }]#}
+{#            };#}
             {#var bmap = chart.getModel().getComponent('bmap').getBMap();#}
             {#bmap.addControl(new BMap.MapTypeControl());#}
-
-            bmap.setOption(options);
-
-        </script>
+{##}
+{#            bmap.setOption(options);#}
+{##}
+{#        </script>#}
+{#<div id="geo" class="container-fluid" style="width: 600px;height: 400px;"></div>#}
+{#    <script type="text/javascript">#}
+{#        $.get('/static/chinaMapJsonData/csj.json',function (geojson) {#}
+{#            echarts.registerMap('zj',geojson);#}
+{#            var chart = echarts.init(document.getElementById('geo'));#}
+{#            chart.setOption({#}
+{#                series: [{#}
+{#                    type: 'map',#}
+{#                    mapType: 'zj',#}
+{#                    label:{#}
+{#                        show: true#}
+{#                    }#}
+{#                }]#}
+{#            });#}
+{#        });#}
+{#    </script>#}
 
 
 {% endblock %}
-</body>
-</html>
