--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <!-- Required meta tags -->
@@ -6,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/index.css">
 
     <title>{% block title %}城市清单{% endblock %}</title>
   </head>
@@ -19,7 +21,8 @@
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js"></script>
-       <script type="text/javascript" src="../static/map/js/china.js"></script>
+       <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=9d9tdoPPP0qoG8YOVrIwa8lcQItSyfU7"></script>
+        <script type="text/javascript" src="../static/map/js/china.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
 
@@ -35,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="../city">城市</a>
+                    <a class="nav-link" href="../citylist">城市</a>
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../env">环境</a>
@@ -50,7 +53,7 @@
                     <a class="nav-link" href="http://nickszy.coldpoker.xyz">author</a>
                   </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" action="/" method="get">
+            <form class="form-inline my-2 my-lg-0" action="/city/" method="get">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" name="city" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
