--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,12 @@
                 </div>
         </div>
     </div>
-
+    <div class="container">
     <hr class="featurette-divider">
 
     <div class="row featurette">
         <div class="col-sm-6">
-            <div id="leida" style="width: 500px; height: 400px" align="center"></div>
+            <div id="leida" style="width: 100%; height: 400px" align="center"></div>
                 <script type="text/javascript">
                     var leida = echarts.init(document.getElementById("leida"));
                     options = {
@@ -158,7 +158,7 @@
             <p align="center">通过历史数据，计算得出城市不同维度的分数</p>
         </div>
             <div class="col-sm-6">
-            <div id="youhao" style="width: 500px; height: 400px" align="center"></div>
+            <div id="youhao" style="width: 100%; height: 400px" align="center"></div>
                 <script type="text/javascript">
                     var leida = echarts.init(document.getElementById("youhao"));
                     options = {
@@ -275,7 +275,7 @@
 
     <div class="row featurette">
         <div class="col-sm-6">
-            <div id="dichan" style="width: 500px; height: 400px" align="center"></div>
+            <div id="dichan" style="width: 80%; height: 400px" align="center"></div>
                 <script type="text/javascript">
                     var leida = echarts.init(document.getElementById("dichan"));
                     options = {
@@ -394,6 +394,7 @@
     </div>
 
     <hr class="featurette-divider">
+    </div>
 
 
 {##}
