add city_des model

--- a/templates/city/citylist.html
+++ b/templates/city/citylist.html
@@ -34,7 +34,7 @@
           <strong class="d-inline-block mb-2 text-primary">{{more.tags}}</strong>
           <h3 class="mb-0">{{more.name}}</h3>
           <div class="mb-1 text-muted">{{more.place}}</div>
-          <p class="card-text mb-auto">{{more.one_des}}</p>
+          <p class="card-text mb-auto">{{more.des}}</p>
           <a href="../city/?city={{ more.name }}">详情</a>
         </div>
         <div class="col-auto d-none d-lg-block">
