change invest url

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="../job">工作</a>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../topic">专题</a>
+                    <a class="nav-link" href="../invest">城市投资</a>
                   </li>
                     <li class="nav-item">
                     <a class="nav-link" href="http://nickszy.coldpoker.xyz">author</a>
