--- a/templates/job/index.html
+++ b/templates/job/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}
-投资
+job
 {% endblock %}
 
 {% block content %}
 
     <div>
-    <p style="width: 100%;height: 100px;display: block;line-height: 100px;text-align: center;"> 城市投资</p>
+    <p style="width: 100%;height: 100px;display: block;line-height: 100px;text-align: center;"> 职场分析</p>
     </div>
     
     <div class="container">
