add login buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,11 @@
               <input class="form-control mr-sm-2" type="search" placeholder="Search" name="city" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+                <ul class="navbar-nav navbar-right pull-right" >
+                    <a class="nav-link" href="/user/sign_up">注册</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="nav-link" href="/user">用户登录</a>
+                </ul>
             </div>
         </nav>
     </div>
