--- a/templates/base.html
+++ b/templates/base.html
@@ -58,9 +58,15 @@
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
                 <ul class="navbar-nav navbar-right pull-right" >
+                    {% if request.session.user_name %}
+                        <a class="nav-link" href="">{{ request.session.user_name }}</a>
+                        <a class="nav-link" href="/user/logout">退出</a>
+                    {% else %}
                     <a class="nav-link" href="/user/sign_up">注册</a>
                     <div class="dropdown-divider"></div>
                     <a class="nav-link" href="/user">用户登录</a>
+                    {% endif %}
+
                 </ul>
             </div>
         </nav>
