--- a/templates/city/city.html
+++ b/templates/city/city.html
@@ -215,7 +215,7 @@
                     // 是否开启拖拽缩放，可以只设置 'scale' 或者 'move'
                     roam: true,
                     // 百度地图的自定义样式，见 http://developer.baidu.com/map/jsdevelop-11.htm
-                    mapStyle: {}
+                    mapStyle:{style:'dark'}
                 },
                 series: [{
                     type: 'scatter',
