--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -4,7 +4,6 @@
 
 {% block content %}
     <div class="text-center" style="padding-top: 40px;padding-bottom: 40px;" align="center">
-        <p>{{ status }}</p>
 
         <form class="form-signin" style="width: 100%; max-width:330px;margin:auto;padding: 15px;" action="./register" method="post">
         {% csrf_token %}
@@ -21,7 +20,8 @@
 {#                  <input type="checkbox" value="remember-me"> Remember me#}
 {#                </label>#}
               </div>
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                      <p style='color:red;'>{{ message }}</p>
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
         </form>
     </div>
 
