change index charts

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,6 @@
                                 color: '#8C8C8C'
                             },
                         },
-
                         radar: {
                             {#shape: 'circle',#}
                             radius:'80%',
@@ -75,12 +74,12 @@
                             },
                             nameGap:'2',
                             indicator: [{//[4300, 10000, 28000, 35000, 50000, 19000, 21000]
-                                    name: '医疗', max: 6500},
-                                {name: '交通', max: 16000},
-                                {name: '教育', max: 30000 },
-                                {name: '环境', max: 38000},
-                                {name: '工作机会',max: 52000},
-                                {name: '生活成本', max: 25000},
+                                    name: '医疗', max: 10},
+                                {name: '交通', max: 10},
+                                {name: '教育', max: 10 },
+                                {name: '环境', max: 10},
+                                {name: '工作机会',max: 10},
+                                {name: '生活成本', max: 10},
                             ],
                             splitArea: {
                                 areaStyle: {
@@ -129,11 +128,8 @@
                                 }
                             },
                             data: [{
-                                    value: [4300, 10000, 28000, 35000, 50000, 19000],
-                                    name: '因素',
-
-
-
+                                    value: [9, 9, 8, 10, 10, 7],
+                                    name: '杭州',
                                 }
                             ]
                         }]
@@ -158,114 +154,20 @@
             <p align="center">通过历史数据，计算得出城市不同维度的分数</p>
         </div>
             <div class="col-sm-6">
-            <div id="youhao" style="width: 100%; height: 400px" align="center"></div>
+            <div id="bar" style="width: 100%; height: 400px" align="center"></div>
                 <script type="text/javascript">
-                    var leida = echarts.init(document.getElementById("youhao"));
-                    options = {
-                        {#backgroundColor: 'white',#}
-                        {#title:{#}
-                        {#  text: "城市评分雷达图",#}
-                        {#    textStyle:{#}
-                        {#      width: '100%',#}
-                        {#        height: '30px'#}
-                        {#    }#}
-                        {#},#}
-                        color: ['#3D91F7', '#61BE67'],
-                        tooltip: {},
-                        legend: {
-                            show: true,
-                            icon: "circle",
-                            bottom: 30,
-                            center: 0,
-                            itemWidth: 14,
-                            itemHeight: 14,
-                            itemGap: 21,
-                            orient: "horizontal",
-                            data: ['a', 'b'],
-                            textStyle: {
-                                fontSize: '70%',
-                                color: '#8C8C8C'
-                            },
-                        },
-
-                        radar: {
-                            {#shape: 'circle',#}
-                            radius:'80%',
-                            triggerEvent: true,
-                            name: {
-                                textStyle: {
-                                    color: '#000000',
-                                    fontSize:'20',
-                                    borderRadius: 3,
-                                    padding: [3, 5]
-                                }
-                            },
-                            nameGap:'2',
-                            indicator: [{//[4300, 10000, 28000, 35000, 50000, 19000, 21000]
-                                    name: '医疗', max: 6500},
-                                {name: '交通', max: 16000},
-                                {name: '教育', max: 30000 },
-                                {name: '环境', max: 38000},
-                                {name: '工作机会',max: 52000},
-                                {name: '生活成本', max: 25000},
-                            ],
-                            splitArea: {
-                                areaStyle: {
-                                     color: [
-                                             'rgba(222,134,85, 0.1)', 'rgba(222,134,85, 0.2)',
-                                             'rgba(222,134,85, 0.4)', 'rgba(222,134,85, 0.6)',
-                                             'rgba(222,134,85, 0.8)', 'rgba(222,134,85, 1)'
-                                         ].reverse()
-                                }
-                            },
-                            axisLabel:{//展示刻度
-                                show: true
-                            },
-                            axisLine: { //指向外圈文本的分隔线样式
-                                lineStyle: {
-                                    color: 'rgba(0,0,0,0)'
-                                }
-                            },
-                            splitLine: {
-                                lineStyle: {
-                                    width:2,
-                                    color: [
-                                        'rgba(224,134,82, 0.1)', 'rgba(224,134,82, 0.2)',
-                                        'rgba(224,134,82, 0.4)', 'rgba(224,134,82, 0.6)',
-                                        'rgba(224,134,82, 0.8)', 'rgba(224,134,82, 1)'
-                                    ].reverse()
-                                }
-                            },
-
-                        },
-
-                        series: [{
-                            name: '一级权重分析',
-                            type: 'radar',
-                            //areaStyle: {normal: {}},
-                            areaStyle: {
-                                normal: {
-                                    color: 'rgba(252,211,3, 0.3)'
-                                }
-                            },
-                            symbolSize: 0,
-                            lineStyle: {
-                                normal: {
-                                    color: 'rgba(252,211,3, 1)',
-                                    width: 1
-                                }
-                            },
-                            data: [{
-                                    value: [4300, 10000, 28000, 35000, 50000, 19000],
-                                    name: '因素',
-
-
-
-                                }
-                            ]
-                        }]
-                    };
-                    leida.setOption(options);
+                    $(function () {
+                    var chart = echarts.init(document.getElementById('bar'), 'white', {renderer: 'canvas'});
+                    $.ajax({
+                        type: "GET",
+                        url: "../city/bar",
+                        dataType: 'json',
+                        success: function (result) {
+                            chart.setOption(result.data);
+                        }
+                    });
+                }
+            )
                 </script>
         </div>
 
@@ -275,114 +177,79 @@
 
     <div class="row featurette">
         <div class="col-sm-6">
-            <div id="dichan" style="width: 80%; height: 400px" align="center"></div>
+            <div id="dichan" style="width: 100%; height: 400px" align="center"></div>
                 <script type="text/javascript">
-                    var leida = echarts.init(document.getElementById("dichan"));
+                    var line = echarts.init(document.getElementById("dichan"));
                     options = {
-                        {#backgroundColor: 'white',#}
-                        {#title:{#}
-                        {#  text: "城市评分雷达图",#}
-                        {#    textStyle:{#}
-                        {#      width: '100%',#}
-                        {#        height: '30px'#}
-                        {#    }#}
-                        {#},#}
-                        color: ['#3D91F7', '#61BE67'],
-                        tooltip: {},
-                        legend: {
-                            show: true,
-                            icon: "circle",
-                            bottom: 30,
-                            center: 0,
-                            itemWidth: 14,
-                            itemHeight: 14,
-                            itemGap: 21,
-                            orient: "horizontal",
-                            data: ['a', 'b'],
-                            textStyle: {
-                                fontSize: '70%',
-                                color: '#8C8C8C'
+                            backgroundColor: '#fff',
+                            grid: {
+                                top: '15%',
+                                right: '10%',
+                                left: '10%',
+                                bottom: '12%'
                             },
-                        },
-
-                        radar: {
-                            {#shape: 'circle',#}
-                            radius:'80%',
-                            triggerEvent: true,
-                            name: {
-                                textStyle: {
-                                    color: '#000000',
-                                    fontSize:'20',
-                                    borderRadius: 3,
-                                    padding: [3, 5]
+                            xAxis: [{
+                                type: 'category',
+                                color: '#59588D',
+                                data: ['2019Q1', '2019Q2', '2019Q3', '2019Q4'],
+                                axisLabel: {
+                                    margin: 20,
+                                    color: '#999',
+                                    textStyle: {
+                                        fontSize: 18
+                                    },
+                                },
+                                axisLine: {
+                                    lineStyle: {
+                                        color: 'rgba(107,107,107,0.37)',
+                                    }
+                                },
+                                axisTick: {
+                                    show: false
+                                },
+                            }],
+                            yAxis: [{
+                                min: 0,
+                                max: 100,
+                                axisLabel: {
+                                    formatter: '{value}',
+                                    color: '#999',
+                                    textStyle: {
+                                        fontSize: 18
+                                    },
+                                },
+                                axisLine: {
+                                    lineStyle: {
+                                        color: 'rgba(107,107,107,0.37)',
+                                    }
+                                },
+                                axisTick: {
+                                    show: false
+                                },
+                                splitLine: {
+                                    lineStyle: {
+                                        color: 'rgba(131,101,101,0.2)',
+                                        type: 'dashed',
+                                    }
                                 }
-                            },
-                            nameGap:'2',
-                            indicator: [{//[4300, 10000, 28000, 35000, 50000, 19000, 21000]
-                                    name: '医疗', max: 6500},
-                                {name: '交通', max: 16000},
-                                {name: '教育', max: 30000 },
-                                {name: '环境', max: 38000},
-                                {name: '工作机会',max: 52000},
-                                {name: '生活成本', max: 25000},
-                            ],
-                            splitArea: {
-                                areaStyle: {
-                                     color: [
-                                             'rgba(222,134,85, 0.1)', 'rgba(222,134,85, 0.2)',
-                                             'rgba(222,134,85, 0.4)', 'rgba(222,134,85, 0.6)',
-                                             'rgba(222,134,85, 0.8)', 'rgba(222,134,85, 1)'
-                                         ].reverse()
-                                }
-                            },
-                            axisLabel:{//展示刻度
-                                show: true
-                            },
-                            axisLine: { //指向外圈文本的分隔线样式
+                            }],
+                            series: [{
+                                data: [48, 95, 60, 56],
+                                type: 'line',
+                                smooth: true,
+                                name: '折线图',
+                                symbol: 'none',
                                 lineStyle: {
-                                    color: 'rgba(0,0,0,0)'
+                                    color: '#3275FB',
+                                    width: 3,
+                                    shadowColor: 'rgba(0, 0, 0, 0.3)',//设置折线阴影
+                                    shadowBlur: 15,
+                                    shadowOffsetY: 20,
                                 }
-                            },
-                            splitLine: {
-                                lineStyle: {
-                                    width:2,
-                                    color: [
-                                        'rgba(224,134,82, 0.1)', 'rgba(224,134,82, 0.2)',
-                                        'rgba(224,134,82, 0.4)', 'rgba(224,134,82, 0.6)',
-                                        'rgba(224,134,82, 0.8)', 'rgba(224,134,82, 1)'
-                                    ].reverse()
-                                }
-                            },
-
-                        },
-
-                        series: [{
-                            name: '一级权重分析',
-                            type: 'radar',
-                            //areaStyle: {normal: {}},
-                            areaStyle: {
-                                normal: {
-                                    color: 'rgba(252,211,3, 0.3)'
-                                }
-                            },
-                            symbolSize: 0,
-                            lineStyle: {
-                                normal: {
-                                    color: 'rgba(252,211,3, 1)',
-                                    width: 1
-                                }
-                            },
-                            data: [{
-                                    value: [4300, 10000, 28000, 35000, 50000, 19000],
-                                    name: '因素',
-
-
-
-                                }
-                            ]
-                        }]
-                    };
-                    leida.setOption(options);
+                            }
+                        ]
+                        };
+                    line.setOption(options);
                 </script>
         </div>
         <div class="col-sm-6 mb-4">
