--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,8 @@
                   </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" action="/city/" method="get">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" name="city" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              <input class="form-control mr-sm-2" type="search" placeholder="城市/职位" name="city" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
             </form>
                 <ul class="navbar-nav navbar-right pull-right" >
                     {% if request.session.user_name %}
@@ -64,7 +64,7 @@
                     {% else %}
                     <a class="nav-link" href="/user/sign_up">注册</a>
                     <div class="dropdown-divider"></div>
-                    <a class="nav-link" href="/user">用户登录</a>
+                    <a class="nav-link" href="/user">登录</a>
                     {% endif %}
 
                 </ul>
