--- a/templates/city/citylist.html
+++ b/templates/city/citylist.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div  class="jumbotron">
-            <div id="china" class="container-fluid" style="width:100%;height: 400px;" align="center">
+            <div id="china" class="container-fluid" style="width:100%;height:400px;min-height: 250px;" align="center">
                 <script>
                     $.get('/static/map/json/china.json',function (geojson) {
                           echarts.registerMap('china',geojson);
@@ -28,7 +28,7 @@
     <div class="row">
         {% for city,more in citylist.items %}
             <div style="list-style: none;margin-bottom: 20px;width:100%;">
-    <div class="theme-cards-holder" style="width:100%;height: 300px;">
+    <div class="theme-cards-holder" style="width:100%;height: auto;padding-left: 5%;padding-right: 5%">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column">
           <strong class="d-inline-block mb-2 text-primary">{{more.tags}}</strong>
