add user link and change cities' ip

--- a/templates/city/city.html
+++ b/templates/city/city.html
@@ -212,7 +212,7 @@
                 },
                 bmap: {
                     // 百度地图中心经纬度
-                    center: [121.44518, 31.23916],
+                    center: [{{city.lng}}, {{city.lat}}],
                     // 百度地图缩放
                     zoom: 10,
                     // 是否开启拖拽缩放，可以只设置 'scale' 或者 'move'
